@@ -1,6 +1,8 @@
 v3.2.17 (XXXX-XX-XX)
 --------------------
 
+* cluster nodes should retry registering in agency until successful
+
 * fixed issue #5354: updated the ui json editor, improved usability
 
 * fixed issue #5648: fixed error message when saving unsupported document
